# SkillMatrix_Track

./: .gitignore  Readme.md  task.md
backend/: main.py  pyproject.toml  test_github.py
backend/app/: config.py
backend/app/databases/: appwrite_client.py
backend/app/features/auth/: routes.py  services.py
backend/app/features/certificates/: routes.py  schemas.py
backend/app/features/community/: routes.py  schemas.py  service.py
backend/app/features/curriculum/: persistence.py  routes.py  schemas.py  services.py
backend/app/features/fl_engine/: __init__.py  client.py  data.py  inference.py  models.py  orchestrator.py  routes.py  schemas.py  strategy.py
backend/app/features/jobs/: routes.py  schemas.py  service.py
backend/app/features/linkedin/: routes.py  schemas.py
backend/app/features/paid_courses/: routes.py  schemas.py  service.py
backend/app/features/profile/: routes.py  schemas.py  services.py
backend/app/features/quiz/: llm.py  routes.py  schemas.py
backend/app/features/skill_analysis/: analyzer.py  github_scraper.py  resume_parser.py  routes.py  schemas.py
backend/app/features/skill_evaluation/: esco_client.py  evaluator.py  onet_client.py  routes.py  schemas.py
backend/app/middleware/: auth_middleware.py
backend/app/utils/: llm.py
backend/contracts/: SkillMatrixCertificate.sol
backend/migrations/: add_progress_json.py
backend/scripts/: seed_community_data.py  setup_community_collections.py
frontend/app/: .gitignore  frontend_output.txt  index.html  package-lock.json  package.json  replace_rounded.py  (+1 more)
novelty/: features.md
(+62 files in other folders)
