[project]
name = "backend"
version = "0.1.0"
description = "SkillMatrix Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.0",
    "pydantic-settings>=2.0.0",
    "gotrue>=2.12.4",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "appwrite>=15.2.0",
    "json-repair>=0.58.0",
]
